make profile picture round, change tagline

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ ga('send', 'pageview');
             <div class="sidebar-wrapper">
 
 		            <div class="profile-container">
-                <img class="profile"  height="140" width="140" src="https://trepik.github.io/cv/assets/images/profile.jpg" alt="profile picture" />
+                <img class="profile"  height="150" width="150" src="https://trepik.github.io/cv/assets/images/profile.jpg" alt="profile picture" />
                 <h1 class="name">Tomáš Repík</h1>
-                <h3 class="tagline">&#34;Almost&#34; Engineer of Bioinformatics</h3>
+                <h3 class="tagline">&#34;Almost&#34; Master of Bioinformatics</h3>
             </div>
 
 
