updated career summary and details about scouting

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ ga('send', 'pageview');
 	            <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>After a languages oriented high school I went to study information technologies to Brno. Three years passed and I successfuly graduated as a <strong>Bachelor of Information Technology</strong>. My stray shoes took me overseas to study for one semester at the <strong>University of Tennessee Chattanooga</strong>. During one year abroad I improved not only my English but also my Spanish. To finish my Master studies I came back to Brno and signed for the <strong>Bioinformatics program</strong>. In november 2015 I started doing open source as an intern at <strong>Red Hat</strong>. After finishing my Master studies I want to move back to Bratislava and therefore I&rsquo;m looking for a job there.</p>
+                    <p>After a languages oriented high school I went to study information technologies to Brno. Three years passed and I successfuly graduated as a <strong>Bachelor of Information Technology</strong>. My stray shoes took me overseas to study Spanish and computer science at the <strong>University of Tennessee Chattanooga</strong>. After a year abroad I came back to Brno to complete my master studies there. I signed for the <strong>Bioinformatics program</strong> which I am about to finish in couple months time. In November 2015 I started doing open source as an intern at <strong>Red Hat</strong>. During my entire studies I always freshened my mind on hikes with scouts. Besides that I was also part of admin team in an online racing community.</p>
                 </div>
             </section>
 
@@ -202,7 +202,7 @@ ga('send', 'pageview');
                         <div class="company">29. troop Albatrosi, Bratislava</div>
                     </div>
                     <div class="details">
-                        <p>I joined scouts when I was 10 and since then I love being one of them. I went under a proper scout leadership education, earning a decree allowing me to do my job. Being a troop leader requires lots of creativity, communication and managerial skills. The scouts movement raise, educate and train children and the youth to become independent, responsible, active and open minded citizens. I think that in my case it proved to be true.</p>
+                        <p>I joined scouts when I was 10 and since then I love being one of them. I went under a proper scout leadership education, earning a decree allowing me to do &lsquo;my job&rsquo;. Being a troop leader requires lots of creativity, communication and managerial skills. The scout movement raise, educate and train children and the youth to become independent, responsible, active and open minded citizens. I think that in my case it proved to be true.</p>
                     </div>
                 </div>
 				
